// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clito --help support built in commands help 1`] = `
"  clito v0.1.0
  Simple and well written command line applications helper

  Usage:
    $ clito <input>

  Options:
    --foo, -f  Prints bar
    --bar  "
`;

exports[`clito --help support custom usage string 1`] = `
"  clito v0.1.0
  Simple and well written command line applications helper

  Usage:
    $ foo <input>

  Options:
    --foo  a test option"
`;

exports[`clito --help support multiple custom usage examples 1`] = `
"  clito v0.1.0
  Simple and well written command line applications helper

  Usage:
    $ clito <input>

  Options:
    --foo  a test option

  Examples:
    foo -foo
    foo --no-foo"
`;

exports[`clito --help support single custom usage example 1`] = `
"  clito v0.1.0
  Simple and well written command line applications helper

  Usage:
    $ clito <input>

  Options:
    --foo  a test option

  Examples:
    foo -foo"
`;
